update README and model plan

--- a/plan-0410.md
+++ b/plan-0410.md
@@ -16,3 +16,8 @@
     + \>>>MORE embedding？？？
 - ensemble [Ref SQUADs](https://rajpurkar.github.io/SQuAD-explorer/)
     + BERT + DAE(Data Augmentation Enhanced) + AoA(Attention-over-Attention)
+
+### Task
+- [Aboud MRC](about.md)
+- [Models](models.md)
+- [Our Model](model.md)
