add layers behind of bert

--- a/plan-0424.md
+++ b/plan-0424.md
@@ -7,28 +7,36 @@ Bert + QANet(self attention)
 
 - 预处理
     + 问题分类
+        * 关键字匹配分类/翻译后关键字分类
     + 数据增强
+        * 中英文/或其他外语翻译
 - embedding
     + 文章和句子分开使用Bert编码
 - 后续模型
     + self attention机制
     + QANet highway层
     + ...
-- 可视化
+- 可视化 [已完成]
     + 文章文件选择
     + 语音询问(科大讯飞接口，语音识别和语音合成)
     + 回答在原文中不同颜色标注(nbest)
         * 解决方案
             - 使用<span style="background: red">Red <span style="background: blue"> Here</span> Here </span>
             - 重叠问题使用区间重叠方法
-        * combox按钮，可以选择查看不同的问题进行答案查看
+        * ~~combox按钮，可以选择查看不同的问题进行答案查看~~
     + 考虑网页形式或PyQT内嵌网页
 - PPT
-    + 简约大气
+    + 简约
     + 参考文献
 
 ### 测试分析
-- 使用Bert作为baseline
-    + 考察每个操作选择的影响
-    + 错误分析
-        * 查看回答错误的问题情况
+- Bert作为baseline
+- 实验
+    + 预处理(直接在原始数据上操作)
+        * 问题分类，嵌入问题开头
+        * 翻译数据增强(多语言)
+    + 模型结构
+        * 学习~~self-attention~~, transformer, pointer-network
+        * 优先级 答案选择pointer-network > self-attention > center network
+- 实验分析
+    + 查看回答错误的问题情况
